// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChevronButton renders IconButton with correct default styling 1`] = `
<IconButton
  basic={false}
  muted={false}
  pill={false}
>
  <Icon>
    <MockSVG />
  </Icon>
</IconButton>
`;

exports[`ChevronButton renders focus-inset styling if provided 1`] = `
<IconButton
  basic={false}
  focusInset={true}
  muted={false}
  pill={false}
>
  <Icon>
    <MockSVG />
  </Icon>
</IconButton>
`;

exports[`ChevronButton rotates icon if prop is provided 1`] = `
<IconButton
  basic={false}
  muted={false}
  pill={false}
>
  <Icon
    rotated={true}
  >
    <MockSVG />
  </Icon>
</IconButton>
`;
